AG-44096 fix some font styles on options page
Squashed commit of the following:

commit 3d1b908d6c5d042c8190fb1cfce54fc6096c0371
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Jul 10 16:49:19 2025 -0400

    fix some font styles on options page

--- a/Extension/src/pages/options/styles/common.pcss
+++ b/Extension/src/pages/options/styles/common.pcss
@@ -186,7 +186,7 @@ label.checkbox-label {
     padding: 0;
     padding-right: 8px;
     margin-top: -5px;
-    line-height: 30px;
+    line-height: 1.2;
 
     &__container {
         position: relative;
@@ -265,9 +265,10 @@ label.checkbox-label {
     }
 
     &__desc {
-        font-size: 14px;
+        font-size: 16px;
         font-weight: 400;
-        padding-top: 8px;
+        line-height: 1.3;
+        padding-top: 12px;
         color: var(--text-description-description-default);
 
         &--back {
